--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,9 @@
     <string name="app_name">MerchantX</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="login">login</string>
-    <string name="password">password</string>
-    <string name="sign_in">sign_in</string>
-    <string name="lost_password">lost_password</string>
+    <string name="login">Login</string>
+    <string name="password">Password</string>
+    <string name="sign_in">Sign In</string>
     <string name="navigation_drawer_open">open</string>
     <string name="navigation_drawer_close">close</string>
     <string name="log_out">Log out</string>
@@ -21,18 +20,19 @@
     <string name="reversed">Reversed</string>
     <string name="all">All</string>
     <string name="phone">Phone</string>
-    <string name="sand_sms">sand sms</string>
+    <string name="sand_sms">Sand sms</string>
     <string name="share">Share</string>
     <string name="amd">AMD</string>
-    <string name="amount">amount</string>
-    <string name="comment">comment</string>
+    <string name="amount">Amount</string>
+    <string name="comment">Comment</string>
     <string name="generate_qr">Generate QR</string>
     <string name="pleas_login">Pleas login</string>
-    <string name="create_data">create data</string>
-    <string name="pay_data">pay data</string>
+    <string name="create_data">Create data</string>
+    <string name="pay_data">Pay data</string>
     <string name="department">Department</string>
-    <string name="authorization">authorization code</string>
+    <string name="authorization">Authorization code</string>
     <string name="payer_app">Payer app</string>
     <string name="card_type">Card type</string>
     <string name="payment_type">Payment type</string>
+    <string name="main_page">Main page</string>
 </resources>
